<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Souvenir</string>
    <string name="app_name_traveljournal">TravelJournal</string>
    <string name="err_creating_note">Error creating new Evernote note</string>
    <string name="success_creating_note">Note Saved to Evernote</string>
    <string name="label_app_title">Souvenir App</string>
    <string name="label_select_button">Select Image</string>
    <string name="label_message">No image selected</string>
    <string name="label_save_button">Save</string>
    <string name="err_image_selected">Error Select Image</string>
    <string name="err_retrieving_resource">Error retrieving resource</string>
    <string name="msg_retrieved_resource">Retrieved resource from server</string>
    <string name="label_log_in">Log Into Evernote</string>
    <string name="label_log_out">Log Out</string>
    <string name="loading">Loading...</string>
    <string name="label_camera_button">Take Photo</string>
    <string name="title_field" />
    <string name="location_field">Location</string>
    <string name="note_field">Note</string>
    <string name="titlePlaceholder">Title</string>
    <string name="locationPlaceholder">Location</string>
    <string name="entryPlaceholder">Enter Note Here</string>
    <string name="img_desc">EntryImg</string>
    <string name="note_award">Award</string>
    <string name="awardIcon">!!!</string>
    <string name="logo">Logo</string>
    <string name="add_note">Add</string>
    <string name="search_note">Search</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_add_note">Add</string>
    <string name="menu_search">Search</string>

    <color name="primaryOrange">#f3c21c</color>
    <color name="primaryBlack">#000000</color>
    <color name="primaryRed">#be1e2d</color>
    <color name="primaryRed2">#a81b1a</color>
    <color name="primaryRed3">#d42120</color>
    <color name="primaryRed4">#df302f</color>

    <string name="app_name_banner">SOUVENIR</string>
    <string name="dialog_award_title">Give An Award:</string>
    <string name="dialog_award_message">Best of...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_abs">AbsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_places">Select A Place</string>
    <string name="gps_dialog">GPS is currently disabled. Would you like to turn it on? Please press the back button to return to the app afterwards.</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="success_update_note">Note saved to Evernote</string>
    <string name="err_update_note">Error saving Evernote note</string>
    <string name="title_activity_itinerary_adapter">ItineraryAdapter</string>
    <string name="itinerary_add_item">Add an Itinerary Item</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="fb_login">Facebook Login for Souvenir</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="fb_share">Facebook Sharing for Souvenir</string>
    <string name="login_needed">You are not logged into Evernote. Please Log In.</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_itinerary_item">Add New Itinerary Item</string>
    <string name="title_fragment_itinerary_item">Add New Itinerary Item</string>
    <string name="itinerary_item_title">Itinerary Title</string>
    <string name="itinerary_item_location">Itinerary Location</string>
    <string name="itinerary_item_istrip">is Trip</string>
    <string name="itinerary_item_from">FROM</string>
    <string name="itinerary_item_to">TO</string>
    <string name="itinerary_item_distance">DISTANCE</string>
    <string name="save_itinerary_item">Save</string>
    <string name="cancel_itinerary_item">Cancel</string>

    <string-array name="drawer_array">
        <!-- <item>Explore</item> -->
        <item>Trips</item>
        <item>All Souvenirs</item>
        <item>Settings</item>
    </string-array>
    
    <string-array name="trips_array">
        <item>Unassigned Trip</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="create_dialog">Would you like to create a Trip or a Souvenir?</string>
    <string name="create_dialog_trip">Trip</string>
    <string name="create_dialog_souvenir">Souvenir</string>
    <string name="finishedSouvenir">is Finished</string>
    <string name="trip_dialog_title">New Trip Info</string>
    <string name="trip_dialog_name">New Trip Name</string>
    <string name="trip_dialog_general_location">New Trip General Location</string>
    <string name="trip_dialog_date_range">Date Range</string>
    <string name="trip_dialog_startdate">Start Date</string>
    <string name="trip_dialog_enddate">End Date</string>
    <string name="note_view_mode_string">Save</string>
    <string name="note_edit_mode_string">Edit</string>
    
</resources>