<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:fillViewport="true" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

	    <ImageView
	        android:id="@+id/note_image"
	        android:layout_width="fill_parent"
	        android:layout_height="250dp"
	        android:background="@android:color/darker_gray"
	        android:contentDescription="@string/img_desc"
	        android:scaleType="centerInside" />
	
	    <EditText
	        android:id="@+id/note_title"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:drawableTop="@color/primaryOrange"
	        android:ems="10"
	        android:gravity="bottom|left"
	        android:hint="@string/titlePlaceholder"
	        android:inputType="text"
	        android:scrollHorizontally="true"
	        android:paddingLeft="15dp" />
	
	    <TextView
	        android:id="@+id/note_location"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:ems="10"
	        android:gravity="bottom|left"
	        android:paddingLeft="15dp"
	        android:hint="@string/locationPlaceholder"
	        android:inputType="textPostalAddress"
	        android:textColor="@android:color/primary_text_dark" />
	
	    <EditText
	        android:id="@+id/note_entry"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top|left"
	        android:hint="@string/entryPlaceholder"
	        android:inputType="textMultiLine" />
	
	</LinearLayout>
</ScrollView>