<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@android:color/darker_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/entry_image"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerInside" />

        <EditText
            android:id="@+id/entry_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableTop="@color/primaryOrange"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="bottom|left"
            android:hint="@string/titlePlaceholder"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:scrollHorizontally="true"
            android:textColor="@color/primaryOrange"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="sans" >
        </EditText>

        <TextView
            android:id="@+id/entry_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="bottom|left"
            android:paddingLeft="15dp"
            android:hint="@string/locationPlaceholder"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/entry_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|left"
            android:hint="@string/entryPlaceholder"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>