<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/itinerary_item_location" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/itinerary_item_istrip_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/itinerary_item_istrip" />

        <Spinner
            android:id="@+id/itinerary_item_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <EditText
        android:id="@+id/itinerary_item_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/itinerary_item_location" />

    <TextView
        android:id="@+id/itinerary_item_fromdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary_item_from" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/itinerary_item_startdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date" />

        <EditText
            android:id="@+id/itinerary_item_starttime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/itinerary_item_todate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary_item_to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/itinerary_item_enddate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date" />

        <EditText
            android:id="@+id/itinerary_item_endtime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/itinerary_item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary_item_distance" />
    
    <EditText
        android:id="@+id/itinerary_item_distance_from_home"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="0.0" />

</LinearLayout>